<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.create_profile">

    <ImageView
        android:id="@+id/backgroundRectangle"
        android:layout_width="324dp"
        android:layout_height="444dp"
        android:layout_margin="16dp"
        android:src="@drawable/rounded_background"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintStart_toStartOf="@+id/backgroundRectangle"
        app:layout_constraintEnd_toEndOf="@+id/backgroundRectangle"
        app:layout_constraintTop_toTopOf="@+id/backgroundRectangle"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/editTextLastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/lastname"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundRectangle"
        app:layout_constraintEnd_toEndOf="@+id/backgroundRectangle"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="@+id/backgroundRectangle"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        app:layout_constraintVertical_bias="0.082" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundRectangle"
        app:layout_constraintEnd_toEndOf="@+id/backgroundRectangle"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="@+id/backgroundRectangle"
        app:layout_constraintTop_toBottomOf="@+id/editTextLastname"
        app:layout_constraintVertical_bias="0.112" />

    <EditText
        android:id="@+id/editTextNumber_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="44dp"
        android:hint="@string/number_phone"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundRectangle"
        app:layout_constraintEnd_toEndOf="@+id/backgroundRectangle"
        app:layout_constraintStart_toStartOf="@+id/backgroundRectangle"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        app:layout_constraintVertical_bias="0.19" />

    <EditText
        android:id="@+id/editTextAbout_me"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="44dp"
        android:hint="@string/about_me"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundRectangle"
        app:layout_constraintEnd_toEndOf="@+id/backgroundRectangle"
        app:layout_constraintStart_toStartOf="@+id/backgroundRectangle"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber_phone" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="331dp"
        android:layout_height="51dp"
        android:layout_margin="16dp"
        android:text="Регистрация"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/backgroundRectangle"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="@+id/backgroundRectangle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundRectangle"
        app:layout_constraintVertical_bias="0.54" />


</androidx.constraintlayout.widget.ConstraintLayout>
